// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerConfirmation should render 1`] = `
<DocumentFragment>
  <svg
    class="my-8"
  >
    confirm-transaction-ledger-banner-dark-green.svg
  </svg>
  <div
    class="mt-8 text-theme-secondary-text"
    data-testid="LedgerConfirmation-description"
  >
    Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
  </div>
  <div
    class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
  >
    <div
      class="Spinner-sc-1rpx65r-0 lfdpzU"
      color="info"
    />
    <span
      class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
      data-testid="LedgerConfirmation-loading_message"
    >
      Waiting for confirmation …
    </span>
  </div>
</DocumentFragment>
`;

exports[`LedgerConfirmation should render with children 1`] = `
<DocumentFragment>
  <svg
    class="my-8"
  >
    confirm-transaction-ledger-banner-dark-green.svg
  </svg>
  <div
    class="mt-8 text-theme-secondary-text"
    data-testid="LedgerConfirmation-description"
  >
    Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
  </div>
  <div
    class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
  >
    <div
      class="Spinner-sc-1rpx65r-0 lfdpzU"
      color="info"
    />
    <span
      class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
      data-testid="LedgerConfirmation-loading_message"
    >
      Waiting for confirmation …
    </span>
  </div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      Transaction Details
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;

exports[`LedgerConfirmation should render with children and custom heading 1`] = `
<DocumentFragment>
  <svg
    class="my-8"
  >
    confirm-transaction-ledger-banner-dark-green.svg
  </svg>
  <div
    class="mt-8 text-theme-secondary-text"
    data-testid="LedgerConfirmation-description"
  >
    Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
  </div>
  <div
    class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
  >
    <div
      class="Spinner-sc-1rpx65r-0 lfdpzU"
      color="info"
    />
    <span
      class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
      data-testid="LedgerConfirmation-loading_message"
    >
      Waiting for confirmation …
    </span>
  </div>
  <div
    class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
  <section
    data-testid="LedgerReview__details"
  >
    <h2
      class="mb-0 text-2xl font-bold"
    >
      heading
    </h2>
    confirmation
  </section>
</DocumentFragment>
`;
